--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,13 @@
 .jumbotron{
-
   padding: 400px;
   background-image:url(../img/home-original.jpg);
+  background-size:cover;
+}
+
+.jumbotron h1{
+  font-size: 75px;
+  color:#eee;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 a{
@@ -16,13 +22,10 @@ a:hover {
   text-decoration: none;
 }
 
-div.section{
-  background-color: #ccc;
-}
-
 .carousel-caption h1{
-  font-size: 150px;
-  color:#ccc;
+  font-size: 100px;
+  color:#eee;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .glyphicon.glyphicon-scissors {
